--- a/template/default/footer.htm
+++ b/template/default/footer.htm
@@ -1,4 +1,3 @@
-<!--{iCMS:public:dialog}-->
 <div id="footer">
   <div class="container">
     <p>免责声明:本站所有内容均来自互联网收集，版权归原作者所有，如果侵犯了你的权益，请通知我们，我们会及时删除侵权内容，谢谢合作！</p>
@@ -20,3 +19,5 @@
     <p>&copy;Copyright 2014 All Rights Reserved. Powered By <a href="http://www.idreamsoft.com/" target="_blank">iCMS</a>. </p>
   </div>
 </div>
+<!--{iCMS:public:dialog}-->
+<!--{iCMS:public:crontab}-->
