--- a/template/default/header.htm
+++ b/template/default/header.htm
@@ -7,7 +7,7 @@
         <a href="<!--{iCMS:router url='/api/user/register'}-->" target="_blank"><i class="fa fa-heart"></i> 注册</a>
       </div>
       <div class="nav_profile" id="iCMS-nav-profile">
-        <!--{include file="iCMS://user/topnavbar.htm"}-->
+        <!--{include file="iCMS://user/menu.htm"}-->
         <span><a href="<!--{iCMS:router url='/user/publish'}-->" target="_blank"><i class="fa fa-edit"></i> 发表文章</a></span>
       </div>
       <div class="clearfix mb5"></div>
