--- a/template/iCMS/article.up_down.htm
+++ b/template/iCMS/article.up_down.htm
@@ -1,4 +1,4 @@
-<div class="iCMS_up_down">
+<div class="iCMS_up_down" data-param='<!--{$article.param|json_encode}-->'>
   <a id="up_article" class="up_down_btn" href="javascript:;">
     <i id="up_icon" class="up_down_icon up"></i>
     <span class="up_down_btn_num" id="up_btn_num"><!--{$article.good}--></span>
