--- a/template/mobile/footer.htm
+++ b/template/mobile/footer.htm
@@ -1,3 +1,4 @@
+<a id="iCMS-scrollUp" href="#header" data-spy="affix" data-offset-top="300"></a>
 <div id="iPHP-DIALOG" class="hide"><img src="<!--{$site.urls.ui}-->/img/loading.gif" /> 加载中,请稍侯......</div>
 <div id="iCMS-MODAL" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="iCMS-MODALLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -12,3 +13,4 @@
     </div>
   </div>
 </div>
+<!--{iCMS:public:crontab}-->
