--- a/template/iCMS/user/manage/article.htm
+++ b/template/iCMS/user/manage/article.htm
@@ -36,7 +36,7 @@
 						<!--{/if}-->
 						<span class="label label-info"><!--{$category[$article_list.ucid].name}--></span>
 						<a href="<!--{if $article_list.status=="1"}--><!--{$article_list.url}--><!--{else}-->javascript:;<!--{/if}-->" target="_blank"><!--{$article_list.title}--></a></td>
-					<td><!--{$article_list.hits}-->/<!--{$article_list.comments}--></td>
+					<td><!--{$article_list.hits.count}-->/<!--{$article_list.comments}--></td>
 					<td><a href="<!--{$article.manage}-->&cid=<!--{$article_list.cid}-->"><!--{$article_list.category.name}--></a></td>
 					<td class="action">
 						<a class="tip" href="<!--{$article.edit}-->&id=<!--{$article_list.id}-->" title="编辑文章"><i class="fa fa-edit"></i></a>
