--- a/template/default/footer.htm
+++ b/template/default/footer.htm
@@ -19,5 +19,5 @@
     <p>&copy;Copyright 2014 All Rights Reserved. Powered By <a href="http://www.idreamsoft.com/" target="_blank">iCMS</a>. </p>
   </div>
 </div>
-<!--{iCMS:public:dialog}-->
+<!--{iCMS:public:common}-->
 <!--{iCMS:public:crontab}-->
