--- a/template/iCMS/user/manage.htm
+++ b/template/iCMS/user/manage.htm
@@ -64,7 +64,7 @@
     </div>
   </div>
 </div>
-<iframe width="0" height="0" style="display:none" id="iCMS_FRAME" name="iCMS_FRAME"></iframe>
+<iframe class="hide" id="iCMS_FRAME" name="iCMS_FRAME"></iframe>
 <!--{include file="{iTPL}/footer.htm"}-->
 </body>
 </html>
