--- a/template/mobile/footer.htm
+++ b/template/mobile/footer.htm
@@ -1,26 +1,11 @@
 
 <footer>
   <div class="container">
+    <p>Powered By <a href="http://www.idreamsoft.com/" target="_blank">iCMS V6</a></p>
     <p>免责声明:本站所有内容均来自互联网收集，版权归原作者所有！</p>
     <p>如果侵犯了你的权益，请通知我们！</p>
     <p>我们会及时删除侵权内容，谢谢合作！</p>
-    <p>Powered By <a href="http://www.idreamsoft.com/" target="_blank">iCMS V6</a>. </p>
   </div>
 </footer>
-
-<a id="iCMS-scrollUp"></a>
-<div id="iPHP-DIALOG" class="hide"><img src="<!--{$site.urls.ui}-->/img/loading.gif" /> 加载中,请稍侯......</div>
-<div id="iCMS-MODAL" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="iCMS-MODALLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="iCMS-MODALLabel">iCMS 提示</h4>
-      </div>
-      <div class="modal-body">
-        <p class="modal-loading"><img src="<!--{$site.urls.ui}-->/img/loading.gif" /> 加载中,请稍侯......</p>
-      </div>
-    </div>
-  </div>
-</div>
+<!--{iCMS:public:common}-->
 <!--{iCMS:public:crontab}-->
