--- a/template/mobile/index.htm
+++ b/template/mobile/index.htm
@@ -62,7 +62,7 @@
             <!--{$article_list.description}-->......
           </div>
           <div class="panel-footer">
-            <u><a href="<!--{$article_list.user.url}-->"><!--{$article_list.user.name}--></a> </u>
+            <u><!--{$article_list.user.link}--></u>
             <time title="<!--{$article_list.pubdate|date:"Y-m-d h:i"}-->"><!--{$article_list.pubdate|format_date}--></time>
             <i><a href="<!--{$article_list.comment.url}-->">评论(<!--{$article_list.comment.count}-->)</a></i>
             <div class="clearfix"></div>
