--- a/template/iCMS/mobile/public.ui.htm
+++ b/template/iCMS/mobile/public.ui.htm
@@ -23,6 +23,7 @@
 <script src="<!--{$iCMS.UI}-->/artDialog/5.0.4/artDialog.min.js"></script>
 <script src="<!--{$iCMS.UI}-->/artDialog/5.0.4/artDialog.plugins.min.js"></script>
 <script src="<!--{$iCMS.UI}-->/iCMS-6.0.0.js"></script>
+<script src="<!--{$site.urls.ui}-->/iCMS.user-6.0.0.js"></script>
 <script src="<!--{$site.urls.ui}-->/iCMS.mobile-6.0.0.js"></script>
 <script src="<!--{$site.urls.ui}-->/jquery.infinitescroll.min.js"></script>
 <script>
