--- a/template/mobile/article.htm
+++ b/template/mobile/article.htm
@@ -5,68 +5,56 @@
     <meta name="keywords" content="<!--{$article.keywords}-->" />
     <meta name="description" content="<!--{$article.description}-->"/>
     <!--{iCMS:public:ui}-->
-    <script>
-    $(function(){
-      $(".fs_btn").click(function(){
-        var i = $(".font_big").length;
-        if (!i) {
-          $(".article_body").addClass("font_big");
-          $(this).find("sup").html("-");
-        }else{
-          $(".article_body").removeClass("font_big");
-          $(this).find("sup").html("+");
-        }
-      })
-    })
-    </script>
   </head>
   <body class="iCMS-mobile">
     <!--{include file="./navbar.htm"}-->
     <div class="container">
       <div class="wrapper">
         <article>
-        <h1><!--{$article.title}--></h1>
-        <div class="info">
-          <!--{$site.title}-->　时间:<!--{$article.pubdate|date:"Y-m-d H:s"}-->　<span class="fs_btn btn btn-default">A<sup>+</sup></span>
-        </div>
-        <!--{if $article.tags_link}-->
-        <div class="article_tags">
-            <span class="label label-info">标签</span> <!--{$article.tags_link}-->
-        </div>
-        <!--{/if}-->
-        <div class="article_body">
-          <div class="content">
-            <!--{$article.body}-->
-            <!--{if $article.page.end}-->
-            <div class="list-group">
-              <!--{iCMS:article:list loop="true" row="10" cid="$category.cid"}-->
-              <a href="<!--{$article_list.url}-->" class="list-group-item">
-              <h4 class="list-group-item-heading r3"><!--{$article_list.title}--></h4>
-              <p class="list-group-item-text"><!--{$article_list.description|cut:40:'...'}--></p>
-              </a>
-              <!--{/iCMS}-->
-            </div>
-            <!--{/if}-->
-            <div id="pages_nav" class="hide">
-              <!--{$article.page.text}-->
+          <h1><!--{$article.title}--></h1>
+          <div class="info">
+            <span class="label label-success"><!--{$article.user.link}--></span> 时间:<!--{$article.pubdate|date:"Y-m-d H:s"}-->　<span class="fs_btn btn btn-default">A<sup>+</sup></span>
+          </div>
+          <!--{if $article.tags_link}-->
+          <div class="article_tags">
+              <span class="label label-info"><i class="fa fa-tags"></i> 标签</span> <!--{$article.tags_link}-->
+          </div>
+          <!--{/if}-->
+          <div class="article_body">
+            <div class="content">
+              <!--{$article.body}-->
+              <!--{if $article.page.end}-->
+              <div class="list-group">
+                <!--{iCMS:article:list loop="true" row="10" cid="$category.cid"}-->
+                <a href="<!--{$article_list.url}-->" class="list-group-item">
+                <h4 class="list-group-item-heading r3"><!--{$article_list.title}--></h4>
+                <p class="list-group-item-text"><!--{$article_list.description|cut:40:'...'}--></p>
+                </a>
+                <!--{/iCMS}-->
+              </div>
+              <!--{/if}-->
+              <div id="pages_nav" class="hide">
+                <!--{$article.page.text}-->
+              </div>
             </div>
           </div>
-        </div>
-        <div class="article_pagenav iCMS_pagination clearfix">
-          <!--{$article.page.text}-->
-        </div>
-        <div id="pages_next" class="hide">
-          <a href="<!--{$article.page.next}-->"/>下一页</a>
-        </div>
+          <script type="text/javascript">
+          $(function(){
+            $("img",".article_body").each(function(i){
+              iCMS.imgFix(this,300);
+            });
+          })
+          </script>
+          <div class="article_pagenav iCMS_pagination clearfix">
+            <!--{$article.page.text}-->
+          </div>
+          <div id="pages_next" class="hide">
+            <!--{if !$article.page.end}-->
+            <a href="<!--{$article.page.next}-->"/>下一页</a>
+            <!--{/if}-->
+          </div>
         </article>
-        <script>
-        iCMS.scrollLoad(".article_body",".content","#pages_next",<!--{$article.page.total}-->,
-        function(e){
-          var pages_nav = $("#pages_nav",e).html();
-          $("#pages_nav",e).remove();
-          $(".article_pagenav").html(pages_nav);
-        });
-        </script>
+        <div class="clearfix"></div>
         <section class="panel panel-default related">
           <div class="panel-heading">
             <h3><i class="fa fa-fire"></i> 热门文章<span>HOT</span></h3>
@@ -87,43 +75,44 @@
         </section>
       </div>
     </div>
+    <div id="scrollLoad-switcher">
+      <button class="btn" type="button" title="关闭/启用 内容自动加载功能"><i class="fa fa-toggle-on"></i></button>
+    </div>
+    <script>
+    $(function(){
+      $(".fs_btn").click(function(){
+        var i = $(".font_big").length;
+        if (!i) {
+          $(".article_body").addClass("font_big");
+          $(this).find("sup").html("-");
+        }else{
+          $(".article_body").removeClass("font_big");
+          $(this).find("sup").html("+");
+        }
+      })
+      //滚动加载
+      iCMS.scrollLoad(".article_body",".content","#pages_next",<!--{$article.page.total}-->,
+      function(e){
+        $("#scrollLoad-switcher").show();
+        var pages_nav = $("#pages_nav",e).html();
+        $("#pages_nav",e).remove();
+        $(".article_pagenav").html(pages_nav);
+      });
+      //滚动加载 开关
+      $('#scrollLoad-switcher .btn').click(function(e) {
+        e.preventDefault();
+        $('.article_body').infinitescroll('toggle');
+        var icon = $("i",this);
+        if(icon.hasClass('fa-toggle-off')){
+          icon.removeClass('fa-toggle-off').addClass('fa-toggle-on');
+        }else{
+          icon.removeClass('fa-toggle-on').addClass('fa-toggle-off');
+        }
+        $(this).blur();
+      });
+    })
+    </script>
     <script src="<!--{$article.hits.script}-->"></script>
-
-<div id="scrollLoad-switcher">
-  <a class="btn" href="javascript:;"><i class="fa fa-toggle-off"></i></a>
-</div>
-
-<style>
-#scrollLoad-switcher {position:fixed; width: 50px; height: 35px;
-  background-color: #ddd; z-index: 10; right: 0; top: 129px;
-  border-radius: 5px 0 0 5px;}
-</style>
-<script>
-$(document).ready(function() {
-
-  $('#debug-trigger').click(function(e) {
-
-    e.preventDefault();
-    $('#debug').toggleClass('open');
-
-  });
-
-  $('#debug-nav').find('a').click(function(e) {
-
-    e.preventDefault();
-
-    var $self = $(this),
-      action = $self.attr('rel'),
-      arg = $self.attr('data-arg'),
-      arg = arg || null;
-
-      $('.article_body').infinitescroll(action,arg);
-
-
-  });
-
-});
-</script>
     <!--{include file="./footer.htm"}-->
   </body>
-  </html>
+</html>
