--- a/template/mobile/category.index.htm
+++ b/template/mobile/category.index.htm
@@ -9,40 +9,67 @@
   <body class="iCMS-mobile">
     <!--{include file="./navbar.htm"}-->
     <div class="container">
+      <div id="cat_carousel" class="carousel slide" data-ride="carousel">
+         <!-- 轮播（Carousel）指标 -->
+         <ol class="carousel-indicators">
+            <li data-target="#cat_carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#cat_carousel" data-slide-to="1"></li>
+            <li data-target="#cat_carousel" data-slide-to="2"></li>
+            <li data-target="#cat_carousel" data-slide-to="3"></li>
+            <li data-target="#cat_carousel" data-slide-to="4"></li>
+            <li data-target="#cat_carousel" data-slide-to="5"></li>
+            <li data-target="#cat_carousel" data-slide-to="6"></li>
+            <li data-target="#cat_carousel" data-slide-to="7"></li>
+         </ol>
+         <!--{iCMS:article:list pic="true" row="8" cid="$category.cid"}-->
+         <!-- 轮播（Carousel）项目 -->
+         <div class="carousel-inner" role="listbox">
+            <!--{foreach key=key value=alist from="$article_list"}-->
+            <div class="item<!--{if $key=="0"}--> active<!--{/if}-->">
+               <a href="<!--{$alist.url}-->">
+                 <img src="<!--{$alist.pic.url}-->" alt="<!--{$alist.title}-->">
+                 <div class="carousel-caption">
+                  <h3><!--{$alist.title}--></h3>
+                 </div>
+              </a>
+            </div>
+            <!--{/foreach}-->
+         </div>
+         <!-- 轮播（Carousel）导航 -->
+         <a class="carousel-control left" href="#cat_carousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+         <a class="carousel-control right" href="#cat_carousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+      </div>
       <div class="clearfix mb10"></div>
       <div id="iCMS-article-list" class="article_list">
-        <!--{iCMS:article:list loop="true" page="true" user="true" row="10"}-->
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <a href="<!--{$article_list.url}-->" target="_blank">
-            <h3 class="panel-title"><!--{$article_list.title}--></h3>
+        <h3 class="title"><span><!--{$category.name}--></span></h3>
+        <ul class="list">
+          <!--{iCMS:article:list loop="true" page="true" user="true" row="10" cid="$category.cid"}-->
+          <li class="full">
+            <a href="<!--{$article_list.url}-->">
+              <!--{if $article_list.pic.url}-->
+              <div class="thumb">
+                <img data-original="<!--{$article_list.pic.url}-->" src="<!--{$site.urls.ui}-->/img/img-default.png">
+              </div>
+              <!--{/if}-->
+              <h3><!--{$article_list.title}--></h3>
+              <p>
+                <!--{$article_list.description|cut:30:'...'}-->
+                <div class="count">
+                  <span class="label label-success"><!--{$article_list.user.link}--></span>
+                  <i><a href="<!--{$article_list.comment.url}-->">评论(<!--{$article_list.comment.count}-->)</a></i>
+                </div>
+              </p>
             </a>
-          </div>
-          <!--{if $article_list.pic.url}-->
-          <div class="panel-thumb">
-            <a href="<!--{$article_list.url}-->" target="_blank">
-            <img data-original="<!--{$article_list.pic.url}-->" src="<!--{$site.urls.ui}-->/img/img-default.png" width="100%">
-            </a>
-          </div>
-          <!--{/if}-->
-          <div class="panel-body">
-            <!--{$article_list.description}-->......
-          </div>
-          <div class="panel-footer">
-            <u><a href="<!--{$article_list.user.url}-->"><!--{$article_list.user.name}--></a> </u>
-            <time title="<!--{$article_list.pubdate|date:"Y-m-d h:i"}-->"><!--{$article_list.pubdate|format_date}--></time>
-            <i><a href="<!--{$article_list.comment.url}-->">评论(<!--{$article_list.comment.count}-->)</a></i>
-            <div class="clearfix"></div>
-          </div>
-        </div>
-        <!--{/iCMS}-->
+          </li>
+          <!--{/iCMS}-->
+        </ul>
       </div>
       <div id="pages_next" class="hide">
         <!--{$iCMS.page.next}-->
       </div>
     </div>
     <script>
-    iCMS.scrollLoad("#iCMS-article-list","li","#pages_next",<!--{$iCMS.page.total}-->);
+    iCMS.scrollLoad("#iCMS-article-list .list","li","#pages_next",<!--{$iCMS.page.total}-->);
     </script>
     <!--{include file="./footer.htm"}-->
   </body>
