--- a/template/mobile/navbar.htm
+++ b/template/mobile/navbar.htm
@@ -11,6 +11,7 @@
         $('[name="q"]',"#iCMS-search").val('');
       }
     });
+
     $(".close","#iCMS-navbar-login").click(function(event) {
       $("#iCMS-navbar-login").hide();
       if(!$("#iCMS-navbar-login").hasClass('affix')){
@@ -20,25 +21,13 @@
         },3000);
       }
     });
-    //-------
-    var touchmove_handler = function (event) {
-          event.preventDefault();
-    };
-    $("#iCMS-navbar-box").on('show.bs.collapse', function () {
-      document.body.addEventListener('touchmove',touchmove_handler, false);
-    }).on('hide.bs.collapse', function () {
-      document.body.removeEventListener('touchmove',touchmove_handler, false);
-    })
-    $(".menu","#iCMS-navbar-box").click(function(event) {
-      $("#iCMS-navbar-box").collapse('hide');
-    });
 
   })
 </script>
 <nav id="header" class="navbar navbar-default" role="navigation" data-spy="affix" data-offset-top="90">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#iCMS-navbar-box">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#iCMS-menu-box">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -50,11 +39,13 @@
 
     <div class="collapse navbar-collapse" id="iCMS-search">
       <form class="navbar-form form-inline" action="<!--{iCMS:router url='/api/search'}-->" role="search">
-        <div class="form-group">
-          <input type="text" name="q" class="form-control" placeholder="请输入关键词">
-        </div>
-        <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> 搜索</button>
-      </form>
+      <div class="input-group">
+        <input type="text" name="q" class="form-control" placeholder="请输入关键词">
+        <span class="input-group-btn">
+          <button type="submit" class="btn btn-default"><i class="fa fa-search"></i> 搜索</button>
+        </span>
+      </div>
+    </form>
     </div>
 
     <div class="navbar-collapse" id="iCMS-navbar-login">
@@ -75,41 +66,4 @@
     </div>
 
   </div>
-</nav>
-
-<nav class="collapse" role="navigation" id="iCMS-navbar-box">
-    <div class="navbar-collapse">
-      <div class="top">
-        <div id="iCMS-nav-login">
-          <a class="btn btn-primary btn-sm" href="<!--{iCMS:router url='/api/user/login'}-->"><i class="fa fa-user"></i> 登 录</a>
-          <a class="btn btn-success btn-sm" href="<!--{iCMS:router url='/api/user/register'}-->"><i class="fa fa-heart"></i> 注册</a>
-          <a class="navbar-brand mlogo" href="<!--{$site.url}-->"><img src="<!--{$site.urls.ui}-->/img/iCMS.mlogo-6.0.png" width="90"/></a>
-        </div>
-        <div id="iCMS-nav-profile">
-          <a class="btn btn-default btn-sm publish" href="<!--{iCMS:router url='/user/publish'}-->" target="_blank"><i class="fa fa-edit"></i> 发表文章</a>
-          <!--{include file="iCMS://user/menu.htm"}-->
-        </div>
-      </div>
-      <div class="clearfix"></div>
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="<!--{$site.url}-->"><i class="fa fa-home"></i> 首 页</a></li>
-        <!--{iCMS:category:list loop="true" stype='top' row="10"}-->
-        <!--{if $category_list.child}-->
-        <li class="dropdown"  id="c<!--{$category_list.cid}-->">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="<!--{$category_list.url}-->" target="_blank"><span><!--{$category_list.name}--></span><b class="caret"></b></a>
-          <ul class="dropdown-menu" role="menu">
-            <!--{iCMS:category:list as="sub_category" loop="true" stype='sub' row="10" cid=$category_list.cid}-->
-            <li><a href="<!--{$sub_category.url}-->" target="_blank"> <i class="fa fa-star-o"></i> <!--{$sub_category.name}--></a></li>
-            <!--{/iCMS}-->
-          </ul>
-        </li>
-        <!--{else}-->
-        <li id="c<!--{$category_list.cid}-->"><a href="<!--{$category_list.url}-->" target="_blank"><span><!--{$category_list.name}--></span></a></li>
-        <!--{/if}-->
-      <!--{/iCMS}-->
-      </ul>
-    </div>
-    <div class="menu">
-        <span class="menu-close">关闭</span>
-    </div>
 </nav>
