--- a/template/mobile/navbar.htm
+++ b/template/mobile/navbar.htm
@@ -1,17 +1,8 @@
 <script>
   $(function () {
-    $(".iCMS_search_btn").click(function(event) {
-      //console.log(!$(this).data('toggle'));
-      if(!$(this).data('toggle')){
-        $(this).data('toggle',true);
-        $("#iCMS-search").show();
-      }else{
-        $(this).data('toggle',false);
-        $("#iCMS-search").hide();
-        $('[name="q"]',"#iCMS-search").val('');
-      }
-    });
-
+    $("#iCMS-search-box").on('hide.bs.collapse', function () {
+        $('[name="q"]',this).val("");
+    })
     $(".close","#iCMS-navbar-login").click(function(event) {
       $("#iCMS-navbar-login").hide();
       if(!$("#iCMS-navbar-login").hasClass('affix')){
@@ -33,19 +24,20 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       </button>
-      <button type="button" class="iCMS_search_btn"><i class="fa fa-search"></i></a></button>
+      <button type="button" class="search-toggle" data-toggle="collapse" data-target="#iCMS-search-box"><i class="fa fa-search"></i></a></button>
       <a class="navbar-brand" href="<!--{$site.url}-->"><img src="<!--{$site.urls.ui}-->/img/iCMS.logo-6.0.png" width="180"/></a>
     </div>
 
-    <div class="collapse navbar-collapse" id="iCMS-search">
-      <form class="navbar-form form-inline" action="<!--{iCMS:router url='/api/search'}-->" role="search">
-      <div class="input-group">
-        <input type="text" name="q" class="form-control" placeholder="请输入关键词">
-        <span class="input-group-btn">
-          <button type="submit" class="btn btn-default"><i class="fa fa-search"></i> 搜索</button>
-        </span>
-      </div>
-    </form>
+    <div class="collapse navbar-collapse" id="iCMS-search-box">
+      <form class="navbar-form form-inline" action="<!--{iCMS:router url='/api'}-->" method="get" role="search" target="_blank">
+        <input name="app" type="hidden" value="search" />
+        <div class="input-group">
+          <input type="text" name="q" class="form-control" placeholder="请输入关键词" value="<!--{$search.title}-->">
+          <span class="input-group-btn">
+            <button type="submit" class="btn btn-primary iCMS_search_btn"><i class="fa fa-search"></i> 搜索</button>
+          </span>
+        </div>
+      </form>
     </div>
 
     <div class="navbar-collapse" id="iCMS-navbar-login">
